[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/main_menu.png" type="Texture" id=1]
[ext_resource path="res://scenes/main_menu.gd" type="Script" id=2]
[ext_resource path="res://shaders/GLES2 anim noise color.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/menu_theme.tres" type="Theme" id=4]
[ext_resource path="res://fonts/Pixelart_Serif_Font_v02_by_ReffPixels/PixelSerif_16px_v02.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="main menu" type="Node2D"]
script = ExtResource( 2 )

[node name="MainMenu" type="Sprite" parent="."]
scale = Vector2( 1.55, 1.55 )
texture = ExtResource( 1 )
centered = false

[node name="GLES2 anim noise color" parent="." instance=ExtResource( 3 )]
visible = false

[node name="StartButton" type="Button" parent="."]
margin_left = 434.0
margin_top = 260.0
margin_right = 750.0
margin_bottom = 376.0
theme = ExtResource( 4 )
text = "Start"

[node name="CloseButton" type="Button" parent="."]
margin_left = 434.0
margin_top = 458.0
margin_right = 750.0
margin_bottom = 567.0
theme = ExtResource( 4 )
text = "Close"

[node name="LanguageButton" type="Button" parent="."]
visible = false
margin_left = 30.0
margin_top = 542.0
margin_right = 116.0
margin_bottom = 578.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "English"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="LanguageButton" to="." method="_on_Button_pressed"]
